--- a/static/css/style.css
+++ b/static/css/style.css
@@ -192,7 +192,7 @@ footer {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/hero-bg.jpg") top right;
   background-size: cover;
 }
 
