--- a/static/css/style.css
+++ b/static/css/style.css
@@ -200,6 +200,7 @@ footer {
   content: "";
   background: rgba(5, 13, 24, 0.3);
   position: absolute;
+  height: 100%;
   bottom: 0;
   top: 0;
   left: 0;
