Add database filter

--- a/templates/home.html
+++ b/templates/home.html
@@ -237,6 +237,7 @@ endblock %}{% block body %}
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter="filter-web">Web Apps</li>
             <li data-filter="filter-games">Games</li>
+            <li data-filter="filter-database">Database</li>
             <li data-filter="filter-flask">Flask</li>
             <li data-filter="filter-tkinter">Tkinter</li>
             <li data-filter="filter-command">Command Line</li>
