--- a/templates/portfolio-page.html
+++ b/templates/portfolio-page.html
@@ -15,6 +15,17 @@
               <i class="bi bi-github"></i>
             </a>
           </span>
+          {% if port_dict[port_num]['url'] %}
+          <span class="social-links mt-3 text-center">
+            <a
+              href="{{port_dict[port_num]['url']}}"
+              class="github rounded-circle d-inline-block p-1 m-2"
+              target="_blank"
+            >
+              <i class="bi bi-box-arrow-up-right"></i>
+            </a>
+          </span>
+          {% endif %}
         </h2>
         <p>{{port_dict[port_num]["overview"]}}</p>
       </div>
