--- a/static/css/style.css
+++ b/static/css/style.css
@@ -192,8 +192,10 @@ footer {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right;
+  background: url("../img/hero-bg.jpg") top right calc((100% - 300px) * 0.25);
+  background-repeat: no-repeat;
   background-size: cover;
+  transition: background-position 0.5s ease;
 }
 
 #hero:before {
@@ -243,8 +245,6 @@ footer {
 
   #hero {
     background-attachment: scroll;
-    transition: background-position 0.5s ease-in-out;
-    background-position: top right -200px;
   }
 }
 
